# cameras-project

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
change-logs/: 0001-governance-architecture-plans.md  0002-tooling-precommit-ci.md  0003-shared-event-schema.md  0004-propose-edge-cloud-auth.md  0005-profile-loader.md  0006-ingestion.md  0007-detection-tracking.md  0008-zone-engine.md  0009-rule-engine.md  0010-storage-and-container-decisions.md  0011-event-store.md  0012-application-wiring.md  0013-plan-zone-editor-ux.md  0014-readme-run-options.md  0015-phase0-live-validation.md  INDEX.md
docs/: BIOMETRICS.md  DECISIONS.md  HOW_TO_COMMIT.md  HOW_TO_LOG_CHANGES.md  HOW_TO_VALIDATE.md  HOW_TO_WRITE_DOCUMENTS.md
docs/plans/: PHASE_0.md  PHASE_1.md  PHASE_2.md  PHASE_3.md
edge/: __init__.py  __main__.py  app.py  config.py  detect.py  events.py  ingest.py  profile.py  rules.py  zones.py
profiles/: retail.yaml
scripts/: __init__.py  draw_zones.py  record_clip.py
shared/: __init__.py  schemas.py
sites/dev/: zones.yaml
src/: main.py
tests/: test_app.py  test_config.py  test_detect.py  test_events.py  test_ingest.py  test_profile.py  test_rules.py  test_schemas.py  test_zones.py
